Fix carousel controls overlapping products

--- a/large-catalog/assets/carousels.css
+++ b/large-catalog/assets/carousels.css
@@ -56,6 +56,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  pointer-events: none;
 }
 
 .carousel__control {
@@ -72,6 +74,8 @@
 
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(3px);
+
+  pointer-events: all;
 }
 
 .carousel__control.hidden {
